force-app/main/default/objects/mcdm_15__ObjectPlugin__c/fields/mcdm_15__IsBulk__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__IsBulk__c</fullName>
    <description>True if the plugin is a bulk send CPI</description>
    <formula>mcdm_15__Journey_Approvals_Plugin__r.mcdm_15__IsBulkSendPlugin__c</formula>
    <label>Is Bulk CPI</label>
    <type>Checkbox</type>
</CustomField>