force-app/main/default/objects/mcdm_15__ObjectPlugin__c/fields/mcdm_15__Journey_Approvals_Plugin__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Journey_Approvals_Plugin__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Journey Approvals Plugin</label>
    <referenceTo>mcdm_15__JourneyApprovalsPlugin__c</referenceTo>
    <relationshipLabel>DM CPI Links</relationshipLabel>
    <relationshipName>ObjectPlugins</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>