force-app/main/default/objects/mcdm_15__ObjectPlugin__c/fields/mcdm_15__Quick_Send_Message__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Quick_Send_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quick Send Message</label>
    <referenceTo>mcdm_15__QuickSendJourney__c</referenceTo>
    <relationshipLabel>DM CPI Links</relationshipLabel>
    <relationshipName>ObjectPlugins</relationshipName>
    <type>Lookup</type>
</CustomField>