force-app/main/default/objects/mcdm_15__ObjectPlugin__c/listViews/Onboarding_Queue_ObjectPlugin.listView-meta.xml
<ListView>
    <fullName>Onboarding_Queue_ObjectPlugin</fullName>
    <filterScope>Queue</filterScope>
    <label>Onboarding Queue</label>
    <queue>Onboarding_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>